--- a/index.html
+++ b/index.html
@@ -1,3 +1,55 @@
+<div class="loader">
+    <div class="bar"></div>
+    <div class="bar"></div>
+    <div class="bar"></div>
+</div>
+
+<style>
+  html, body {
+	 height: 100%;
+}
+ body {
+	 background: #001021;
+	 margin: 0;
+	 display: flex;
+	 align-items: center;
+	 justify-content: center;
+}
+ .loader {
+	 display: flex;
+	 flex-direction: row;
+	 align-items: center;
+}
+ .loader .bar {
+	 width: 10px;
+	 height: 5px;
+	 background: #10c15c;
+	 margin: 2px;
+	 animation: bar 1s infinite linear;
+}
+ .loader .bar:nth-child(1) {
+	 animation-delay: 0s;
+}
+ .loader .bar:nth-child(2) {
+	 animation-delay: 0.25s;
+}
+ .loader .bar:nth-child(3) {
+	 animation-delay: 0.5s;
+}
+ @keyframes bar {
+	 0% {
+		 transform: scaleY(1) scaleX(0.5);
+	}
+	 50% {
+		 transform: scaleY(10) scaleX(1);
+	}
+	 100% {
+		 transform: scaleY(1) scaleX(0.5);
+	}
+}
+ 
+</style>
+
 <script>const queryString = window.location.search;
 console.log(queryString);
 
