--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
  
 </style>
 
-<script>const queryString = window.location.search;
-const queryString = window.location.search;
+<script>
+	const queryString = window.location.search;
 console.log(queryString);
 
 const urlParams = new URLSearchParams(queryString);
 
 const email = urlParams.get('email')
 console.log(email);
-document.window.replace("mailto:"+email);
+window.location.replace("mailto:"+email);
 </script>
